Only accepting ? extends DatabaseEntry in setup and createTable